--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <DOCTYPE html>
 <html>
 <head>
-    <meta propery = "og:title" content="하울아 - 프로필 링크">
+    <meta propery = "og:title" content="조지훈 - 프로필 링크">
     <meta propery = "og:description" content="어서와 코딩은 처음이지?">
     <meta propery = "og:image" content="하울아.jpg">
     <script type="text/javascript " src="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/free/logo_teamsparta.png"></script>
-    <title>르탄이 - 프로필 링크</title>
+    <title>조지훈 - 프로필 링크</title>
     <style>
         @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
 *           {
@@ -79,7 +79,7 @@
 <body>
     <div class="wrap">
         <div class="profile"></div>
-        <h1 class="main">하울아</h1>
+        <h1 class="main">조지훈</h1>
         <p class="sub">코딩.. 잘하고 싶어요!</p>
         <a target="_blank" href="https://spartacodingclub.kr/">스파르타코딩클럽</a>
         <a target="_blank" href="https://hanghae99.spartacodingclub.kr/">항해99</a>
